[localizer] add parameter (stop_filtering)

--- a/examples/localizer_test/localizer_test.vcxproj.filters
+++ b/examples/localizer_test/localizer_test.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="..\..\src\lrpose_recog\lrpose_localizer.hpp">
       <Filter>Recognizer Modules</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\localizer\localizer_odometry.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
