[vps] Added enhanced filter scheme for vps.py

--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -40,9 +40,12 @@ recording_header_name: "dg_ros_"
 vps_load_dbfeat: 0
 vps_save_dbfeat: 0
 vps_use_custom_image_server: 0   # 0 (default) to use naver roadview, 1 to use custom images for database images
-vps_gps_accuracy: 0.9  # Constant gps accuracy related to search range. In streetview image server, download_radius = int(10 + 190*(1-vps_gps_accuracy)) , 1:10m, 0.95:20m, 0.9:29m, 0.79:50, 0.0:200 meters
+vps_gps_accuracy: 0.9  # Constant gps accuracy related to search range. In streetview image server, download_radius = int(10 + 190*(1-vps_
 vps_enable_mcl: 0
-vps_filter_size: 7  # 11 for coex indoor, window size of median filter ( 1 means off)
+vps_filter_size: 11  # 11 for coex indoor, window size of median filter ( 1 means off)
+vps_filter_valid_thre: 5 # 1st threshold to check valid of vps result in median filter in metric (Large numger, (ex) 1000, means off)
+vps_filter_outlier_thre: 25  # 2nd threshold to reject outlier sample in median filter in metric (Large numger, (ex) 1000, means off)
+vps_filter_conf_thre: 0.8
 
 ## Odometry Specific Options
 enable_simulated_encoder: 0
