[map] change Bucheon map

--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -116,12 +116,12 @@ COEX:
   video_input_path: ""
 
 Bucheon:
-  map_image_path: "data/NaverMap_Bucheon(Satellite).png" 
+  map_image_path: "data/Bucheon/NaverMap_Bucheon(Satellite).png" 
   map_data_path: "data/Bucheon/TopoMap_Bucheon.csv"
-  map_ref_point_latlon: [37.510928, 126.764344]
-  map_ref_point_pixel: [1535, 1157]
+  map_ref_point_latlon: [37.517337, 126.764761]
+  map_ref_point_pixel: [2225, 880]
   map_pixel_per_meter: 1.056
-  map_image_rotation: 0
+  map_image_rotation: 1.3
   image_server_port: "10002"
   gps_input_path: "data/Sensor_record_20210513_Bucheon_AndroSensor.csv"
   video_input_path: ""
