--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -23,8 +23,9 @@ server_ip_list: ["127.0.0.1", "129.254.81.204"]
 image_server_port: "10000"  # etri: 10000, coex: 10001, bucheon: 10002, etri_indoor: 10003
 topic_name_index: 0         # 0: ETRI CART_VER2_ANDROIDGPS, 1: ETRI CART_VER2, 2:KETI ROBOT
 topic_names_set: ["ETRI_CART_VER2_ANDROIDGPS", "ETRI_CART_VER2", "KETI_ROBOT", "ETRI_CART_VER1"]
-robot_site_index: 0      #0:"Bucheon_KETI", 1:"COEX_KETI"
-robot_site_set: ["Bucheon_KETI", "COEX_KETI"]
+robot_map_index: 1      #0:"Bucheon_KETI", 1:"Bucheon_Robot", 2:"COEX_KETI", 3:"COEX_KETI_220824"
+robot_map_set: ["Bucheon_KETI", "Bucheon_Robot", "COEX_KETI","COEX_KETI_220824"]
+robot_map_onoff: 1       #0:offline map, 1:online map
 
 dg_srcdir: "/home/dgtest/deepguider/src"  # path of deepguider/src folder (required for python embedding)
 enable_tts: 1
@@ -219,6 +220,15 @@ Bucheon_KETI:
   video_input_path: ""
   robot_map_rotation: -90
   robot_map_origin: [3110, 2576]
+
+Bucheon_Robot:
+  robotmap_path: "data/Bucheon/bucheon_220922/occumap_bucheon.png" 
+  robotmap_ref_point_latlon: [37.5177542, 126.7651744]
+  robotmap_ref_point_pixel: [715, 650] 
+  robotmap_ref_point_meter_per_pixel: 0.1
+  robotmap_rotation: -0.8
+  robotmap_scale: 10.0
+  robotmap_origin_pixel: [345, 1110] #-34.5, -126.5 -> transform to latlon align. ex) margin-y
 
 COEX_KETI:
   map_image_path: "data/COEX/occumap_mcl(fliplr).png"
