--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -12,6 +12,7 @@ enable_exploration: 0
 enable_logo: 0
 enable_imu: 0
 enable_odometry: 1
+enable_mcl: 0
 enable_mapserver: 0    # 0: use saved offline map, 1: online mapserver
 
 ## Main Options
