--- a/examples/localizer_test/localizer_test.vcxproj.filters
+++ b/examples/localizer_test/localizer_test.vcxproj.filters
@@ -122,7 +122,7 @@
     <ClInclude Include="..\..\src\lrpose_recog\lrpose_localizer.hpp">
       <Filter>Recognizer Modules</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\localizer\localizer_odometry.hpp">
+    <ClInclude Include="..\..\src\localizer\localizer_mcl.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
